# RobStudio1

./: README.md  roshelp.odt  waffle_pi.yaml
RTAB_MAPS/farmWith3CropRows/: Sprint4Map.pgm  Sprint4Map.yaml  map_1728280899.yaml
TutWork/cpp_pubsub/: CMakeLists.txt
TutWork/cpp_pubsub/src/: image_converter.cpp
TutWork/cpp_pubsub2/: CMakeLists.txt
TutWork/lab3/: CMakeLists.txt  package.xml
TutWork/lab3/src/: laserscannth.cpp
TutWork/lab4/: CMakeLists.txt  package.xml
TutWork/lab4/src/: deadreckoning.cpp
TutWork/lab5/: CMakeLists.txt
TutWork/lab5/src/: scan_to_image_node.cpp
crop_data/: CMakeLists.txt  package.xml
crop_data/src/: crop_data.cpp  crop_data.hpp  field_structs.hpp
cylinder/: CMakeLists.txt  Doxyfile  package.xml
cylinder/src/: cylinder.cpp  cylinder.hpp
cylindercircling/: CMakeLists.txt  Doxyfile
cylindercircling/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  annotated.html  classCylinder__inherit__graph.map  cylinder_8cpp_8o_8d.html  cylinder_8hpp.html  cylinder_8hpp__dep__incl.md5  cylinder_8hpp__incl.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_eb617aa3744023278d9578429998eefa.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  globals_func.html  globals_vars.html  index.html  index_8dox.html  inherits.html
cylindercircling/html/search/: all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  files_0.js  functions_1.js  functions_3.js  functions_7.js  functions_8.js  variables_1.js  variables_3.js  variables_5.js
cylindercircling/latex/: annotated.tex  classCylinder.tex  cylinder_8cpp.tex  cylinder_8cpp_8o_8d.tex  cylinder_8hpp.tex  cylinder_8hpp__dep__incl.md5  dir_0021520209db6cce86a667004bae3b6d.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_eb617aa3744023278d9578429998eefa.tex
cylindercircling/launch/: cyl.launch.py
cylindercircling/src/: cylinder.cpp  cylinder.hpp  index.dox  main.cpp  main.hpp
cylindercircling/src/config/: initial_pose.yaml  map_ekf.yaml  odom_ekf.yaml
field_node/: CMakeLists.txt  package.xml
field_node/src/: field.cpp  field.hpp  field_structs.hpp
image_overlay/: CMakeLists.txt  package.xml
image_overlay/images/: farmWith3CropRows.pgm
image_overlay/src/: image_overlay.cpp
sprint4/: CMakeLists.txt  package.xml
sprint4/html/: classCylinder-members.html  classCylinder.html  classCylinder__inherit__graph.md5  classes.html  cylinder_8cpp.html  cylinder_8cpp__incl.map  cylinder_8cpp__incl.md5  cylinder_8hpp__dep__incl.map  cylinder_8hpp__incl.map  cylinder_8hpp_source.html  dir_0021520209db6cce86a667004bae3b6d.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5
sprint4/html/search/: all_2.js  all_7.js  all_8.js  defines_0.js  defines_5.js  files_1.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_4.js
sprint4/latex/: classCylinder__coll__graph.md5  cylinder_8cpp__incl.md5  cylinder_8hpp__incl.md5  dir_63772b626f2709090f0bdca0f40827b4.tex  files.tex  hierarchy.tex  index.tex  index_8dox.tex  refman.tex
sprint4/launch/: cyl.launch.py
sprint4/src/: cylinder.cpp  cylinder.hpp  main.cpp  main.hpp
sprint4/src/Python_Scaffold_Warehouse/: FieldConfig.py  FieldSavedList.py  SettingMapApplication.py  Utils.py  controller.py  model.py  settingmapview.py
turtlebot3_gazebo/launch/: farmWith3CropRows.launch.py  farmwithCylinder.launch.py
turtlebot3_gazebo/models/10-wheelbarrow/: model (copy).sdf  model.config  model.sdf  wheelbarrow.mtl
turtlebot3_gazebo/models/corn/: model.config  model.sdf
turtlebot3_gazebo/models/fence/: model.config  model.sdf
turtlebot3_gazebo/models/fence/models/: fence.mtl
turtlebot3_gazebo/models/fencewall1/: model.config  model.sdf
turtlebot3_gazebo/models/fencewall1/models/: FenceWall.mtl
turtlebot3_gazebo/models/fencewall2/: model.config  model.sdf
turtlebot3_gazebo/models/fencewall2/models/: FenceWall2.mtl  FenceWall3.mtl
turtlebot3_gazebo/worlds/: farmWith3CropRows.world  farmwithCylinder.world
