<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab3</name>
  <version>0.0.0</version>
  <description>Republish every Nth point of the scanning data</description>
  <maintainer email="andrewcoorey13@gmail.com">andrew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
